fixing mobile overlay cutoff on safari iOS

--- a/css/index.css
+++ b/css/index.css
@@ -1887,8 +1887,8 @@ a {
   -webkit-transform: translateX(-100%);
   -ms-transform: translateX(-100%);
   transform: translateX(-100%);
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   -webkit-transition: transform 0.2s ease-out;
   -webkit-transition: -webkit-transform 0.2s ease-out;
   transition: -webkit-transform 0.2s ease-out;
@@ -1935,7 +1935,6 @@ a {
 } */
 
 .overlay-info {
-  padding-top: 40px;
   display: block;
   font-size: 1.8em;
   letter-spacing: 4px;
